19990528-14:30 EST David G. Holm <dholm@jsd-llc.com>
  * source/rtl/console.c
    - NIL ouptuts "NIL", just like it used to before I removed it after
      running some tests with Clipper, which turned out to be flawed.
    - Improved link between GT API screen position and stdout/stderr
      screen position.

19990528-23:15 WIB Andi Jahja <andij@aonlippo.co.id>
  * source/tools/hb_f.c
    - add hb_fselect

  + tests/working/testsel.prg
    test program for hb_fselect()

19990529-10:11 EST Les Griffith
  * added both builddos.bat and makefile.dos for djgpp dos enviroment

19990528-21:00 WIB Andi Jahja <andij@aonlippo.co.id>
  * makefile.b32
    modified to include hb_f.c in harbour.lib

  + source/tools/hb_f.c
    nanforum ft_f*() clones
    - hb_fuse
    - hb_frecno
    - hb_flastrec
    - hb_fgotop
    - hb_fgobottom
    - hb_fgoto
    - hb_feof
    - hb_freadln
    - hb_fskip

  + tests/working/testhbf.prg
    - Test program for hb_f*() routines

19990527-22:06 EST Les Griffith
  * changed iotest.prg to work without and exit clause

19990527-21:57 EST Les Griffith
  * fix to gtwin.c for duplicate function gtwherex 2nd one should be
    gtwherey

19990527-18:00 EST David G. Holm <dholm@jsd-llc.com>
  * makefile.icc
    - Added missing modules
    - Modified to build console with USE_GTAPI
    - Modified to put console and gtos2 into terminal library
  * source/rtl/console.c
    - Had row,col and y,x reversed in InitializeConsole()
  * source/rtl/gt/gtdos.c
    - Had row,col and y,x reversed in gtWhereX() and gtWhereY()
  * tests/working/biccexe.cmd
    - Include new terminal library

19990527-17:25 EST David G. Holm <dholm@jsd-llc.com>
  * makefile.b31
    - Added -DUSE_GTAPI as standard compiler option
  * source/rtl/console.c
    - Added #ifdef USE_GTAPI to allow compiling without using the GT API

19990527-14:15 EST David G. Holm <dholm@jsd-llc.com>
  * makefile.b31
    - Added gtdos to terminal library
  * include/ctoharb.h